package hw7;

interface CampusViewer {

    /**
     * public interface for us to display information for our campus Map
     * @param cp the CampusModel for our campus
     */
    void display(CampusModel cp);
}
